--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,10 @@ select = [
     "N",  # pep8-naming
     "W",  # pycodestyle
     "D",  # pydocstyle
+    "UP", # pyupgrade
+    "C4", # flake8-comprehensions
+    "I",  # isort
+    "RUF022",  # sort __all__
 ]
 extend-select = [
     "RUF100", # Warn about unused noqa
@@ -108,11 +112,19 @@ extend-select = [
 
 [tool.ruff.lint.per-file-ignores]
 
+[tool.ruff.lint.isort]
+known-first-party = ["lsst"]
+
 [tool.ruff.lint.pycodestyle]
 max-doc-length = 79
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
+
+[tool.ruff.format]
+docstring-code-format = true
+# Formatter does not know about indenting.
+docstring-code-line-length = 69
 
 [tool.coverage.report]
 exclude_lines = [
