--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -10,4 +10,4 @@ jobs:
   call-workflow:
     uses: lsst/rubin_workflows/.github/workflows/mypy.yaml@main
     with:
-      folders: "python"
+      folders: "python tests"
